@@ -38,6 +38,11 @@
     rearranged main key manager window to accomodate.
     * src/seahorse-ldap-source.c: Don't display error when key already exists
     on server.    
+    * libseahorse/seahorse-ldap-source.c:
+    * libseahorse/seahorse-operation.c:
+    * libseahorse/seahorse-progress.c:
+    * libseahorse/seahorse-progress.h:
+    * libseahorse/seahorse-keyserver-sync.c: Better progress and status updates.
     
 2005-04-03  Nate Nielsen  <nielsen@memberwebs.com>
 
